finalized StmtLabeled block construction with predecessors and successors